# routes/recipes.js
@@ -17,4 +17,53 @@ router.get("/:recipeId", async (req, res, next) => {
   }
 });
 
+router.get("/:recipeId/fullDetails", async (req, res, next) => {
+  try {
+    const user_id = req.session.user_id;
+    const recipe = await recipes_utils.getRecipeFullDetails(req.params.recipeId, user_id);
+    res.send(recipe);
+  } catch (error) {
+    next(error);
+  }
+});
+
+
+
+
+router.get("/random", async (req, res, next) => {
+  try {
+    console.log("getRandomRecipes");
+    const user_id = req.session.user_id;
+    const recipe = await recipes_utils.getRandomRecipes(user_id);
+    res.send(recipe);
+  } catch (error) {
+    next(error);
+  }
+});
+
+
+
+
+
+
+
+
+
+/**
+ * This path returns the information of all recipes that
+ * the user saved as favorite
+ * (recipes that the user got as recommendation)
+  */
+router.get("/favorites", async (req, res, next) => {
+  try {
+    const user_id = req.session.user_id;
+    const recipes = await recipes_utils.getRecipesByUserFavorites(user_id);
+    res.send(recipes);
+  } catch (error) {
+    next(error);
+  }
+});
+
+
+
 module.exports = router;
