# routes/user.js
@@ -28,12 +28,24 @@ router.post('/favorites', async (req,res,next) => {
   try{
     const user_id = req.session.user_id;
     const recipe_id = req.body.recipeId;
+    console.log(recipe_id);
     await user_utils.markAsFavorite(user_id,recipe_id);
     res.status(200).send("The Recipe successfully saved as favorite");
     } catch(error){
     next(error);
   }
 })
+
+router.post("/lastSeen", async (req, res, next) => {
+  try {
+    const user_id = req.session.user_id;
+    const recipeId = req.body.recipeId;
+    await user_utils.markAsSeen(req.session.user_id, recipeId);
+    res.status(200).send("The Recipe was successfully saved as seen");;
+  } catch (error) {
+    next(error);
+  }
+});
 
 /**
  * This path returns the favorites recipes that were saved by the logged-in user
@@ -45,7 +57,7 @@ router.get('/favorites', async (req,res,next) => {
     const recipes_id = await user_utils.getFavoriteRecipes(user_id);
     let recipes_id_array = [];
     recipes_id.map((element) => recipes_id_array.push(element.recipe_id)); //extracting the recipe ids into array
-    const results = await recipe_utils.getRecipesPreview(recipes_id_array);
+    const results = await recipe_utils.getRecipesPreview(recipes_id_array , user_id);
     res.status(200).send(results);
   } catch(error){
     next(error); 
